feat(wip): requests api endpoint
